[build-system]
requires = [
    "setuptools",
]

[project]
name = "mlrl-common"
description = "Provides common modules to be used by different types of multi-label rule learning algorithms"
readme = "README.md"
authors = [
    { name="Michael Rapp", email="michael.rapp.ml@gmail.com" },
]
keywords = [
    "machine learning",
    "scikit-learn",
    "multi-label classification",
    "multi-output regression",
    "multi-target regression",
    "rule learning",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: C++",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
    "version",
    "requires-python",
    "dependencies",
    "optional-dependencies",
]

[project.urls]
homepage = "https://github.com/mrapp-ke/MLRL-Boomer"
source = "https://github.com/mrapp-ke/MLRL-Boomer.git"
download = "https://github.com/mrapp-ke/MLRL-Boomer/releases"
changelog = "https://raw.githubusercontent.com/mrapp-ke/MLRL-Boomer/refs/heads/main/CHANGELOG.md"
documentation = "https://mlrl-boomer.readthedocs.io/en/latest"
issues = "https://github.com/mrapp-ke/MLRL-Boomer/issues"
