[metadata]
name = mlrl-common
version = 0.7.0
description = Provides modules that are commonly used by multi-label rule learning algorithms
author = Michael Rapp
author_email = michael.rapp.ml@gmail.com
url = https://github.com/mrapp-ke/Boomer
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 3
    Operating System :: POSIX :: Linux
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    machine learning
    scikit-learn
    multi-label classification
    rule learning
platforms =
    linux-x86_64

[options]
package_dir =
    = .
packages = find:
python_requires = >= 3.7
install_requires =
    numpy >= 1.21.0
    scipy >= 1.7.0
    scikit-learn >= 1.0.0

[options.package_data]
* = *.so*
