[build-system]
requires = [
    "setuptools",
]

[project]
name = "mlrl-testbed"
description = "Provides utilities for the training and evaluation of machine learning algorithms"
readme = "README.md"
authors = [
    { name="Michael Rapp", email="michael.rapp.ml@gmail.com" },
]
keywords = [
    "machine learning",
    "scikit-learn",
    "multi-label classification",
    "multi-output regression",
    "multi-target regression",
    "rule learning",
    "evaluation",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dynamic = [
    "version",
    "requires-python",
    "dependencies",
    "optional-dependencies",
]

[project.urls]
homepage = "https://github.com/mrapp-ke/MLRL-Boomer"
source = "https://github.com/mrapp-ke/MLRL-Boomer.git"
download = "https://github.com/mrapp-ke/MLRL-Boomer/releases"
changelog = "https://raw.githubusercontent.com/mrapp-ke/MLRL-Boomer/refs/heads/main/CHANGELOG.md"
documentation = "https://mlrl-boomer.readthedocs.io/en/latest"
issues = "https://github.com/mrapp-ke/MLRL-Boomer/issues"

[project.scripts]
testbed = "mlrl.testbed.main:main"
