[metadata]
name = mlrl-testbed
version = 0.7.0
description = Provides optional modules for the evaluation of multi-label rule learning algorithms
author = Michael Rapp
author_email = michael.rapp.ml@gmail.com
url = https://github.com/mrapp-ke/Boomer
license = MIT
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Artificial Intelligence
    Topic :: Software Development :: Libraries :: Python Modules
keywords =
    machine learning
    scikit-learn
    multi-label classification
    rule learning
    evaluation
platforms = any

[options]
package_dir =
    = .
packages = find_namespace:
python_requires = >= 3.7
install_requires =
    liac-arff >= 2.5.0
    mlrl-common == 0.7.0

[options.extras_require]
BOOMER = mlrl-boomer == 0.7.0
SECO = mlrl-seco == 0.7.0

[options.entry_points]
console_scripts =
    boomer = mlrl.testbed.main_boomer:main [BOOMER]
    seco = mlrl.testbed.main_seco:main [SECO]
